[youtube] fix(item.scss): fix the spacing between video title, publisher name, and date.

--- a/packages/plugin-youtube/statics/styles/item.scss
+++ b/packages/plugin-youtube/statics/styles/item.scss
@@ -51,7 +51,7 @@
 }
 
 .video_title {
-  margin-top: 12px;
+  margin-top: 11px;
   height: 40px;
   font-size: 14px;
   color: #000000;
@@ -64,14 +64,14 @@
 }
 
 .video_publisher_name {
-  margin-top: 7px;
+  margin-top: 4px;
   height: 16px;
   font-size: 12px;
   line-height: 1.33;
   color: #969696;
 }
 .video_publish_date {
-  margin-top: 6px;
+  margin-top: 4px;
   height: 16px;
   font-size: 12px;
   line-height: 1.33;
